--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body, h1, h2, h3, p, ul, li, dd, dl, dt, figure {
@@ -20,7 +19,6 @@ ul {
   border: 1px solid #000;
   width: 70%;
 }
-
 .img-wrapper img {
   width: 100%;
 }
@@ -28,94 +26,112 @@ ul {
 .calWrpper {
   max-width: 1000px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   background-color: #ccc;
   padding: 20px;
 }
-
 .calWrpper .cal1,
 .calWrpper .cal2 {
   outline: 1px dashed #333;
   background-color: #fff;
   padding: 20px;
-  width: calc((400 / 1000) *100%);
-  width: calc((400 / 960) *100%);
+  width: 40%;
+  width: 41.6666666667%;
 }
 
-.cardWrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.column__wrapper {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin: 20px;
   gap: 20px;
 }
-
-.ex-card {
+.column__wrapper--4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20px;
+  gap: 20px;
+}
+.column__card {
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 4px;
   width: 100%;
 }
-
-.h2-heading {
+.column__heading {
   border-bottom: 3px solid #fc2;
   padding-bottom: 8px;
 }
-
-.p-text {
+.column__text {
   padding-top: 20px;
 }
 
+.column__wrapper--grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
 @media (min-width: 768px) {
-  .cardWrapper {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+  .col--2 {
+    width: calc((100% - 20px) / 2);
   }
-  .ex-card {
+
+  .col--3 {
+    width: calc((100% - 20px) / 2);
+  }
+
+  .col--4 {
     width: calc((100% - 20px) / 2);
   }
 }
-
-.list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 20px;
+.main-container {
+  display: grid;
+  grid-template: "h h h" 80px "ad ar as" 500px "f f f" 120px/100px 1fr 300px;
 }
 
+header, .ad, article, aside, footer {
+  border: 1px solid #ccc;
+}
+
+header {
+  grid-area: h;
+}
+
+.ad {
+  grid-area: ad;
+}
+
+article {
+  grid-area: ar;
+}
+
+aside {
+  grid-area: as;
+}
+
+footer {
+  grid-area: f;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
 .list__item {
   padding-top: 40px;
 }
-
 .list__wrapper {
   text-decoration: none;
 }
-
 .list__title {
   font-size: 16px;
 }
-
 .list::after {
   content: "";
   display: block;
@@ -126,7 +142,6 @@ ul {
     width: calc((100% - 20px) / 2);
   }
 }
-
 @media (min-width: 768px) {
   .list__item {
     width: calc((100% - 40px) / 3);
@@ -137,25 +152,19 @@ ul {
     width: calc((100% - 40px) / 3);
   }
 }
-
 .list--pc-3col__item {
   width: 100%;
   border: 1px solid #ddd;
-  -webkit-box-shadow: 0 2px 10px #ddd;
-          box-shadow: 0 2px 10px #ddd;
+  box-shadow: 0 2px 10px #ddd;
   margin-bottom: 40px;
-  -webkit-transition: border .4s;
-  transition: border .4s;
+  transition: border 0.4s;
 }
-
 .list--pc-3col__item:hover {
   border: 1px solid #37952F;
 }
-
 .list--pc-3col__wrapper {
   text-decoration: none;
 }
-
 .list--pc-3col__body {
   padding: 20px;
 }
@@ -170,7 +179,6 @@ ul {
     width: calc((100% - 20px) / 2);
   }
 }
-
 @media (min-width: 768px) {
   .list--pc-3col__item {
     width: calc((100% - 40px) / 3);
@@ -181,7 +189,6 @@ ul {
     width: calc((100% - 40px) / 3);
   }
 }
-
 .container {
   padding: 0 20px;
   max-width: 1000px;
@@ -192,53 +199,40 @@ ul {
 .bg {
   padding: 50px 0;
 }
-
 .bg.bg--bg {
   background-color: #cdecf0;
   margin-left: calc(50% - 50vw);
   overflow-x: hidden;
 }
-
 .bg__title {
   font-weight: bold;
   font-size: 24px;
 }
-
 .bg__text {
   padding-top: 20px;
 }
 
 .card {
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
+  flex-direction: column-reverse;
 }
-
 .card__title {
   text-align: center;
   padding-top: 20px;
 }
-
 .card__text {
   padding-top: 20px;
 }
-
 .card__image {
   position: relative;
 }
-
 .card__image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .card__image::before {
   content: "";
   display: block;
@@ -250,7 +244,6 @@ ul {
   left: -20px;
   z-index: -1;
 }
-
 .card.card--reverce .card__image::before {
   left: 20px;
 }
@@ -258,27 +251,15 @@ ul {
 @media (min-width: 768px) {
   .card {
     padding: 20px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: row-reverse;
+    justify-content: space-between;
   }
   .card__body {
     width: calc(50% - 20px);
     outline: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: column;
+    justify-content: center;
   }
   .card__image {
     width: 50%;
@@ -288,53 +269,37 @@ ul {
     width: 50vw;
   }
   .card.card--reverce {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
   }
   .card.card--reverce .card__image::before {
     left: 60px;
   }
 }
-
 .card-2 {
   background-color: #cdecf0;
   padding-bottom: 30px;
 }
-
 .card-2__inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
+  flex-direction: column-reverse;
 }
-
 .card-2__body {
   padding: 30px;
   background-color: #fff;
   margin: -30px 30px 0;
   z-index: 1;
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
 }
-
 .card-2__title {
   text-align: center;
   padding-top: 20px;
 }
-
 .card-2__text {
   padding-top: 20px;
 }
-
 .card-2__image {
   position: relative;
 }
-
 .card-2__image img {
   width: 100%;
   height: 100%;
@@ -343,17 +308,11 @@ ul {
 }
 
 .mainVisual {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
+  flex-direction: column-reverse;
   color: #fff;
   margin-bottom: 50px;
 }
-
 .mainVisual__body {
   background-color: #0027ff;
   letter-spacing: 0.2em;
@@ -361,18 +320,15 @@ ul {
   margin: -60px 15px 0 0;
   padding: 30px 35px;
 }
-
 .mainVisual__title {
   font-size: 48px;
 }
-
 .mainVisual__title::after {
   content: "";
   display: block;
   border-top: 1px solid #fff;
   margin: 15px 0 15px -35px;
 }
-
 @media (min-width: 768px) {
   .mainVisual__body {
     width: 67%;
@@ -384,22 +340,24 @@ ul {
   }
   .mainVisual__image {
     margin-left: 35px;
-    margin-left: calc(125 / 1600 *100vw);
+    margin-left: 7.8125vw;
   }
 }
-
 @media (min-width: 1080px) {
   .mainVisual__body {
     width: 67%;
     margin: -20.635vh 0 0;
     padding: 5vw 5vw 5vw 16.25vw;
   }
+
   .mainVisual__title br {
     display: none;
   }
+
   .mainVisual__image {
     margin-left: 7.8125vh;
   }
+
   .mainVisual__title::after {
     content: "";
     display: block;
@@ -407,8 +365,7 @@ ul {
     margin-left: -16.25vw;
   }
 }
-
-input[type="submit"] {
+input[type=submit] {
   background-color: #3d98b4;
   -moz-appearance: none;
        appearance: none;
@@ -420,4 +377,3 @@ input[type="submit"] {
   width: 260px;
   cursor: pointer;
 }
-/*# sourceMappingURL=styles.css.map */
