--- a/styles.css
+++ b/styles.css
@@ -117,39 +117,204 @@ footer {
   grid-area: f;
 }
 
-.list {
+.map1 {
+  width: 100%;
+}
+
+.google-map2 {
+  position: relative;
+  max-width: 700px;
+  margin: 0 auto;
+}
+.google-map2::after {
+  content: "";
+  padding-top: 56.25%;
+  display: block;
+}
+
+.map2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.thumtestCard {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 20px;
+  border: 1px solid #000;
 }
-.list__item {
-  padding-top: 40px;
+.thumtestCard__item {
+  margin-top: 40px;
+  border: 1px solid #ddd;
+  width: 100%;
 }
-.list__wrapper {
+.thumtestCard__wrapper {
   text-decoration: none;
+  width: 100%;
 }
-.list__title {
-  font-size: 16px;
+.thumtestCard__image {
+  width: 100%;
+  position: relative;
 }
-.list::after {
+.thumtestCard__image::before {
   content: "";
+  padding-top: 56.25%;
   display: block;
 }
-
-@media (min-width: 568px) {
-  .list__item {
-    width: calc((100% - 20px) / 2);
-  }
+.thumtestCard__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.thumtestCard__title {
+  font-size: 16px;
 }
 @media (min-width: 768px) {
-  .list__item {
-    width: calc((100% - 40px) / 3);
+  .thumtestCard__item {
+    width: calc((100% - 40px) / 2);
   }
-  .list::after {
+  .thumtestCard::after {
     content: "";
     display: block;
     width: calc((100% - 40px) / 3);
+  }
+}
+.mediaCard {
+  border: 1px solid #000;
+  padding: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.mediaCard__body {
+  background-color: #ccc;
+  width: calc(70% - 20px);
+}
+.mediaCard__text {
+  padding-top: 30px;
+}
+.mediaCard__image {
+  width: 30%;
+  aspect-ratio: 16/9;
+  margin-right: 20px;
+}
+.mediaCard__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.ichimatu__item {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.ichimatu__body {
+  padding: 30px;
+  background-color: #f9fae9;
+}
+.ichimatu__title {
+  text-align: center;
+}
+.ichimatu__text {
+  margin-top: 20px;
+}
+.ichimatu__image {
+  aspect-ratio: 16/9;
+}
+.ichimatu__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  vertical-align: bottom;
+}
+
+@media (min-width: 768px) {
+  .ichimatu {
+    border: 1px solid #000;
+  }
+  .ichimatu__item {
+    flex-direction: row-reverse;
+  }
+  .ichimatu__item:nth-child(even) {
+    flex-direction: row;
+  }
+  .ichimatu__body {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ichimatu__image {
+    width: 50%;
+  }
+}
+.ichimatu2 {
+  padding: 20px;
+}
+.ichimatu2__item {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.ichimatu2__item.normal .ichimatu2__body {
+  margin-right: -20px;
+}
+.ichimatu2__item.normal .ichimatu2__image {
+  margin-left: -20px;
+}
+.ichimatu2__item.rev .ichimatu2__body {
+  margin-right: -20px;
+}
+.ichimatu2__item.rev .ichimatu2__image {
+  margin-left: -20px;
+}
+.ichimatu2__body {
+  padding: 30px;
+  background-color: #f9fae9;
+}
+.ichimatu2__title {
+  text-align: center;
+}
+.ichimatu2__text {
+  margin-top: 20px;
+}
+.ichimatu2__image {
+  aspect-ratio: 16/9;
+}
+.ichimatu2__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  vertical-align: bottom;
+}
+
+@media (min-width: 768px) {
+  .ichimatu2__item {
+    flex-direction: row-reverse;
+  }
+  .ichimatu2__item.rev {
+    flex-direction: row;
+  }
+  .ichimatu2__body {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: -40px;
+    padding-top: 60px;
+  }
+  .ichimatu2__image {
+    width: 50%;
   }
 }
 .list--pc-3col__item {
