--- a/styles.scss
+++ b/styles.scss
@@ -187,6 +187,34 @@ footer{
 }
 
 
+.google-map{
+  // width: 100%;
+}
+
+.map1{
+  width: 100%;
+}
+
+.google-map2{
+  position: relative;
+  max-width: 700px;
+  margin: 0 auto;
+  &::after{
+    content: "";
+    padding-top:56.25%;
+    display: block;
+  }
+}
+
+.map2{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+}
+
 
 // .btn{
 //   max-width: 300px;
@@ -423,24 +451,44 @@ footer{
 //   }
 // }
 
-.list{
+
+
+.thumtestCard{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 20px;
+  border: 1px solid #000;
 
   &__item{
-    // width: calc((100% - 20px) /2);
-    padding-top: 40px;
+    margin-top: 40px;
+    border: 1px solid #ddd;
+    width: 100%;
   }
 
   &__wrapper{
     text-decoration: none;
-
+    width: 100%;
   }
 
   &__image{
-
+    width: 100%;
+    position: relative;
+    // aspect-ratio: 16 / 9;
+    
+    &::before{
+      content: "";
+      padding-top: 56.25%;
+      display: block;
+    }
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 
   &__title{
@@ -452,34 +500,202 @@ footer{
   }
 
   &::after{
-    content: "";
-    display: block;
+    // content: "";
+    // display: block;
     // width: calc((100% - 20px) /2);
   }
 }
 
 @media(min-width: 568px){
-  .list{
+  // .list{
 
-    &__item{
-      // width: calc((100% - 40px) / 3);
-      width: calc((100% - 20px) / 2);
-    }
-  }
+  //   &__item{
+  //     // width: calc((100% - 40px) / 3);
+  //     width: calc((100% - 20px) / 2);
+  //   }
+  // }
 }
 
 @media(min-width: 768px){
-  .list{
+  .thumtestCard{
 
     &__item{
       // width: calc((100% - 60px) / 4);
-      width: calc((100% - 40px) / 3);
+      width: calc((100% - 40px) / 2);
     }
 
     &::after{
       content: "";
       display: block;
       width: calc((100% - 40px) / 3);
+    }
+  }
+}
+
+.mediaCard{
+  border: 1px solid #000;
+  padding: 40px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+
+  &__body{
+    background-color: #ccc;
+    width: calc(70% - 20px);
+  }
+
+  &__title{
+
+  }
+
+  &__text{
+    padding-top: 30px;
+  }
+  
+  &__image{
+    width: 30%;
+    aspect-ratio: 16 / 9;
+    margin-right: 20px;
+    // flex-shrink: 0;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.ichimatu{
+
+  &__item{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  &__body{
+    padding: 30px;
+    background-color: #f9fae9;
+  }
+
+  &__title{
+    text-align: center;
+  }
+
+  &__text{
+    margin-top: 20px;
+  }
+
+  &__image{
+    aspect-ratio: 16 / 9;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      vertical-align: bottom;
+    }
+  }
+}
+
+@media(min-width: 768px){
+  .ichimatu{
+    border: 1px solid #000;
+
+    &__item{
+      flex-direction: row-reverse;
+
+      &:nth-child(even){
+        flex-direction: row;
+      }
+    }
+    
+    &__body{
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  
+    &__image{
+      width: 50%;
+    }
+  }
+}
+
+//市松模様応用//
+.ichimatu2{
+  padding: 20px;
+
+  &__item{
+    display: flex;
+    flex-direction: column-reverse;
+    &.normal{
+      .ichimatu2__body{
+        margin-right: -20px;
+      }
+      .ichimatu2__image{
+        margin-left: -20px;
+      }
+    }
+    
+    &.rev{
+      
+      .ichimatu2__body{
+        margin-right: -20px;
+      }
+
+      .ichimatu2__image{
+        margin-left : -20px;
+      }
+    }
+  }
+
+  &__body{
+    padding: 30px;
+    background-color: #f9fae9;
+  }
+
+  &__title{
+    text-align: center;
+  }
+
+  &__text{
+    margin-top: 20px;
+  }
+
+  &__image{
+    aspect-ratio: 16 / 9;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      vertical-align: bottom;
+    }
+  }
+}
+
+@media(min-width: 768px){
+  .ichimatu2{
+
+    &__item{
+      flex-direction: row-reverse;
+
+      &.rev{
+        flex-direction: row;
+      }
+    }
+    
+    &__body{
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-top: -40px;
+      padding-top: 60px;
+    }
+  
+    &__image{
+      
+      width: 50%;
     }
   }
 }
